Fix #4747: BUR layout partly broken on iOS.
Move the BUR help text from the <textarea> placeholder attribute to a
<details> tag that embeds the [[help:bur_notice]] wiki page.

Also update some CSS for the <details> tag that was meant to only apply
to the user upgrades page and didn't look good here.

--- a/app/javascript/src/styles/base/040_colors.css
+++ b/app/javascript/src/styles/base/040_colors.css
@@ -255,7 +255,7 @@ html {
 
   --login-link-color: var(--red-5);
   --footer-border-color: var(--grey-1);
-  --details-border-color: var(--grey-2);
+  --divider-border-color: var(--grey-2);
 
   --jquery-ui-widget-content-background: var(--body-background-color);
   --jquery-ui-widget-content-text-color: var(--text-color);
@@ -446,7 +446,7 @@ body[data-current-user-theme="dark"] {
 
   --login-link-color: var(--red-4);
   --footer-border-color: var(--grey-7);
-  --details-border-color: var(--grey-7);
+  --divider-border-color: var(--grey-7);
 
   --jquery-ui-widget-content-text-color: var(--text-color);
   --jquery-ui-widget-content-background: var(--grey-8);
